--- a/src/Index.html
+++ b/src/Index.html
@@ -119,59 +119,70 @@
 
     getAutoSyncStatus();
   </script>
+  <link rel="stylesheet" type="text/css" href="index.css"></style>
 </head>
 
 <body>
-  <h1>Welcome to Amtrak2Calendar!</h1>
-  <p>
-    Amtrak2Calendar scans your GMail account for Amtrak reservations, and
-    adds corresponding events to your calendar automatically. This is
-    intended to be like what GMail already does for airline reservations, but
-    for Amtrak, which isn't directly supported.
-  </p>
-  <p>
-    To try it out, click one of the "Sync now" or "Enable auto-sync" buttons.
-  </p>
-  <p>
-    Once you enable auto-sync, then you're all set. You don't need to visit
-    this page again. Amtrak2Calendar will continue to add events to your
-    calendar whenever you make a new Amtrak reservation.
-  </p>
-  <p>
-    When auto-sync is enabled, Amtrak2Calendar runs hourly. This means you
-    won't see your newly-purchased Amtrak reservation in your calendar until
-    the next time the script runs. If you'd like to see it immediately, you
-    can click the button labeled "Sync now."
-  </p>
-  <p>
-    Auto-sync is currently 
-    <span id="autoSyncStatus"> ... </span>.
-  </p>
-  <button type="button" onclick="syncNow()">
-    Sync now
-  </button>
-  <button type="button" onclick="enableAutoSync()">
-    Enable auto-sync
-  </button>
-  <button type="button" onclick="disableAutoSync()">
-    Disable auto-sync
-  </button>
-  <p id="status"></p>
-  <div id="lastRunResults"></div>
-  <p>
-    Amtrak train reservations will be synced to calendar: 
-    <span id="selectedCalendarName"><?= selectedCalendar.name ?></span>
-  </p>
-  <p>To use a different calendar, click one of the following buttons:</p>
-  <ul>
-    <? calendars.forEach(function(calendar){ ?>
-      <li>
-      <button type="button" onclick="selectNewCalendar(<?= calendar.id ?>, <?= calendar.name ?>)">
-        <?= calendar.name ?>
-      </button>
-      </li>
-    <? }) ?>
-  </ul>
+  <nav>
+    <a href="https://github.com/jrunningen/amtrak2calendar">Github</a>
+    <a href="https://groups.google.com/forum/#!forum/amtrak2calendar-users">Mailing List</a>
+  </nav>
+  <div class="hero">
+    <div class="hero-text">
+      <h1>Amtrak2Calendar</h1>
+    </div>
+  </div>
+  <div class="container">
+    <p>
+      Amtrak2Calendar scans your GMail account for Amtrak reservations, and
+      adds corresponding events to your calendar automatically. This is
+      intended to be like what GMail already does for airline reservations, but
+      for Amtrak, which isn't directly supported.
+    </p>
+    <p>
+      To try it out, click one of the "Sync now" or "Enable auto-sync" buttons.
+    </p>
+    <p>
+      Once you enable auto-sync, then you're all set. You don't need to visit
+      this page again. Amtrak2Calendar will continue to add events to your
+      calendar whenever you make a new Amtrak reservation.
+    </p>
+    <p>
+      When auto-sync is enabled, Amtrak2Calendar runs hourly. This means you
+      won't see your newly-purchased Amtrak reservation in your calendar until
+      the next time the script runs. If you'd like to see it immediately, you
+      can click the button labeled "Sync now."
+    </p>
+    <p>
+      Auto-sync is currently 
+      <span id="autoSyncStatus"> ... </span>.
+    </p>
+    <button type="button" onclick="syncNow()">
+      Sync now
+    </button>
+    <button type="button" onclick="enableAutoSync()">
+      Enable auto-sync
+    </button>
+    <button type="button" onclick="disableAutoSync()">
+      Disable auto-sync
+    </button>
+    <p id="status"></p>
+    <div id="lastRunResults"></div>
+    <p>
+      Amtrak train reservations will be synced to calendar: 
+      <span id="selectedCalendarName"><?= selectedCalendar.name ?></span>
+    </p>
+    <p>To use a different calendar, click one of the following buttons:</p>
+    <ul>
+      <? calendars.forEach(function(calendar){ ?>
+        <li>
+        <button type="button" onclick="selectNewCalendar(<?= calendar.id ?>, <?= calendar.name ?>)">
+          <?= calendar.name ?>
+        </button>
+        </li>
+      <? }) ?>
+    </ul>
+  </div>
 </body>
 
 </html>
