--- a/src/Stylesheet.html
+++ b/src/Stylesheet.html
@@ -1,5 +1,4 @@
-/* TODO: Move to a styles/ directory. */
-
+<style>
 :root {
     /* --background-color: #eeeeee; */
     --background-color: white;
@@ -59,3 +58,4 @@ button {
     /* box-shadow: none; */
     /* border-radius: 0px; */
 }
+</style>
