Store the banner image on GCS

--- a/src/Stylesheet.html
+++ b/src/Stylesheet.html
@@ -33,7 +33,7 @@ nav a {
 }
 
 .hero {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.0), var(--background-color)), url("banner.jpg");
+    background-image: linear-gradient(rgba(255, 255, 255, 0.0), var(--background-color)), url("https://storage.googleapis.com/amtrak2calendar/banner.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
