Separate client JS from HTML

--- a/src/Index.html
+++ b/src/Index.html
@@ -3,123 +3,9 @@
 
 <head>
   <base target="_top">
-  <?!= include('Stylesheet'); ?>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script>
-    function setStatus(statusText) {
-      $('#status').text(statusText);
-    }
-
-    function finishedStatus(result) {
-      setStatus("Finished!");
-    }
-
-    function failedStatus() {
-      setStatus("Failed!");
-    }
-
-    function syncNow() {
-      $('#status').text("Syncing...");
-      google.script.run
-        .withSuccessHandler((results) => {
-          finishedStatus(JSON.stringify(results));
-          displayLastRun(results);
-        })
-        .withFailureHandler(failedStatus)
-        .autoSync();
-    }
-
-    function enableAutoSync() {
-      setStatus("Installing trigger...");
-      google.script.run
-        .withSuccessHandler(() => {
-          finishedStatus();
-          getAutoSyncStatus();
-        })
-        .withFailureHandler(failedStatus)
-        .createAutoSyncTrigger();
-    }
-
-    function disableAutoSync() {
-      setStatus("Removing triggers...");
-      google.script.run
-        .withSuccessHandler(() => {
-          finishedStatus();
-          getAutoSyncStatus();
-        })
-        .withFailureHandler(failedStatus)
-        .removeAllTriggers();
-    }
-
-    function selectNewCalendar(calendarId, calendarName) {
-      setStatus("Switching to calendar \"" + calendarName + "\"...");
-      google.script.run
-        .withSuccessHandler(() => {
-          setStatus("Finished!");
-          $('#selectedCalendarName').text(calendarName);
-        })
-        .withFailureHandler(failedStatus)
-        .setCalendarId(calendarId);
-    }
-
-    function getAutoSyncStatus() {
-      google.script.run
-        .withSuccessHandler((isAutoSyncEnabled) => {
-          if (isAutoSyncEnabled) {
-            $('#autoSyncStatus').text("enabled");
-          } else {
-            $('#autoSyncStatus').text("disabled");
-          }
-        })
-        .withFailureHandler(() => {
-          $('#autoSyncStatus').text(" in an unknown state.");
-        })
-        .isAutoSyncEnabled();
-    }
-
-    /**
-     * Displays a summary of the changes made by Amtrak2Calendar in the last
-     * run.
-     *
-     * @param results Object The results computed by the last run of
-     *     autoSync().
-     */
-    function displayLastRun(results) {
-      $("#lastRunResults").html('');
-      if (results.reservationsFound.length !== 0) {
-        $("#lastRunResults").append(`
-          <p>Found reservations:</p><ul id="reservationsFound"></ul>
-        `);
-        for (const reservation of results.reservationsFound) {
-          $("#reservationsFound").append(`
-          <li>${reservation}</li>
-          `);
-        }
-      }
-      if (results.reservationsAlreadyPresent.length !== 0) {
-        $("#lastRunResults").append(`
-          <p>ReservationsAlreadyPresent:</p><ul id="reservationsAlreadyPresent"></ul>
-        `);
-        for (const reservation of results.reservationsAlreadyPresent) {
-          $("#reservationsAlreadyPresent").append(`
-          <li>${reservation}</li>
-          `);
-        }
-      }
-      if (results.trainsSynced.length !== 0) {
-        $("#lastRunResults").append(`
-          <p>Newly synced trains:</p><ul id="trainsSynced"></ul>
-        `);
-        for (const train of results.trainsSynced) {
-          $("#trainsSynced").append(`
-          <li>${train}</li>
-          `);
-        }
-      }
-    }
-
-    getAutoSyncStatus();
-  </script>
+  <?!= include('Stylesheet'); ?>
+  <?!= include('Script'); ?>
   <link rel="stylesheet" type="text/css" href="index.css"></style>
 </head>
 
