--- a/src/Index.html
+++ b/src/Index.html
@@ -6,13 +6,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <?!= include('Stylesheet'); ?>
   <?!= include('Script'); ?>
-  <link rel="stylesheet" type="text/css" href="index.css"></style>
 </head>
 
 <body>
   <nav>
-    <a href="https://github.com/jrunningen/amtrak2calendar">Github</a>
-    <a href="https://groups.google.com/forum/#!forum/amtrak2calendar-users">Mailing List</a>
+		<div class="nav-text">
+			<a href="https://github.com/jrunningen/amtrak2calendar">Github</a>
+			<a href="https://groups.google.com/forum/#!forum/amtrak2calendar-users">Mailing List</a>
+		</div>
   </nav>
   <div class="hero">
     <div class="hero-text">
