--- a/src/Stylesheet.html
+++ b/src/Stylesheet.html
@@ -1,6 +1,5 @@
 <style>
 :root {
-    /* --background-color: #eeeeee; */
     --background-color: white;
 }
 
@@ -11,18 +10,22 @@ body, html {
 }
 
 nav {
-    max-width: 960px;
-    margin: auto;
+	background: #333333;
+	padding: 5px;
+}
+
+div.nav-text {
+	max-width: 960px;
+	margin: auto;
 }
 
 nav a {
-    padding: 10px;
+	padding: 10px;
+	color: white;
+	text-decoration: none;
 }
 
 .container {
-    /* border-style: solid; */
-    /* border-radius: 10px; */
-    /* border-width: 1px; */
     margin: auto;
     background: white;
     max-width: 960px;
@@ -53,9 +56,11 @@ nav a {
 }
 
 button {
-    /* border: 0; */
-    /* background: none; */
-    /* box-shadow: none; */
-    /* border-radius: 0px; */
+	background: #0a70d0;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 14px;
+  font-size: 15px;
+  color: #fff;
 }
 </style>
