--- a/src/Stylesheet.html
+++ b/src/Stylesheet.html
@@ -1,66 +1,82 @@
 <style>
 :root {
-    --background-color: white;
+  --background-color: white;
 }
 
 body, html {
-    margin: 0px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    background: var(--background-color);
+  margin: 0px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  background: var(--background-color);
 }
 
+/* Nav */
+
 nav {
-	background: #333333;
-	padding: 5px;
+  background: #333333;
+  padding: 5px;
 }
 
 div.nav-text {
-	max-width: 960px;
-	margin: auto;
+  max-width: 960px;
+  margin: auto;
 }
 
 nav a {
-	padding: 10px;
-	color: white;
-	text-decoration: none;
-}
-
-.container {
-    margin: auto;
-    background: white;
-    max-width: 960px;
-}
-
-.container p {
-    margin: 10px;
+  padding: 10px;
+  color: white;
+  text-decoration: none;
 }
 
 .hero {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.0), var(--background-color)), url("https://storage.googleapis.com/amtrak2calendar/banner.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    height: 200px;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.0), var(--background-color)), url("https://storage.googleapis.com/amtrak2calendar/banner.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 200px;
 }
 
 .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-shadow: 1px 1px 0 #000;
-    font-size: 2em;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-shadow: 1px 1px 0 #000;
+  font-size: 2em;
 }
 
+/* Main */
+
+.container {
+  margin: auto;
+  background: white;
+  max-width: 960px;
+	display: flex;
+	flex-flow: row wrap;
+}
+
+div.help {
+ flex: 2 300px;
+ margin: 10px;
+}
+
+div.controls {
+ flex: 1 300px;
+ margin: 10px;
+}
+
+/* Buttons */
+
 button {
-	background: #0a70d0;
+  background: #0a70d0;
   border: none;
   border-radius: 5px;
   padding: 8px 14px;
   font-size: 15px;
   color: #fff;
+	width: 100%;
+	margin: 2px;
 }
 </style>
