Add buttons to go to emails and calendar events

--- a/src/Index.html
+++ b/src/Index.html
@@ -7,6 +7,7 @@
   <?!= include('Stylesheet'); ?>
   <?!= include('Script'); ?>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
